--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -33,11 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boston housing dataset has 489 data points with 4 variables each.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries necessary for this project\n",
     "import numpy as np\n",
@@ -83,26 +89,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistics for Boston housing dataset:\n",
+      "\n",
+      "Minimum price: $105,000.00\n",
+      "Maximum price: $1,024,800.00\n",
+      "Mean price: $454,342.94\n",
+      "Median price $438,900.00\n",
+      "Standard deviation of prices: $165,171.13\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Minimum price of the data\n",
-    "minimum_price = None\n",
+    "minimum_price = np.min(prices)\n",
     "\n",
     "# TODO: Maximum price of the data\n",
-    "maximum_price = None\n",
+    "maximum_price = np.max(prices)\n",
     "\n",
     "# TODO: Mean price of the data\n",
-    "mean_price = None\n",
+    "mean_price = np.mean(prices)\n",
     "\n",
     "# TODO: Median price of the data\n",
-    "median_price = None\n",
+    "median_price = np.median(prices)\n",
     "\n",
     "# TODO: Standard deviation of prices of the data\n",
-    "std_price = None\n",
+    "std_price = np.std(prices)\n",
     "\n",
     "# Show the calculated statistics\n",
     "print \"Statistics for Boston housing dataset:\\n\"\n",
@@ -136,7 +154,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "Answer:\n",
+    "    RM would be proportional to P(rice)\n",
+    "    LSAT would be inversely proportional to P\n",
+    "    PTRATIO would be low for high income neighborhoods therefore proportional to P"
    ]
   },
   {
@@ -165,23 +186,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# TODO: Import 'r2_score'\n",
+    "from sklearn.metrics import r2_score\n",
     "\n",
     "def performance_metric(y_true, y_predict):\n",
     "    \"\"\" Calculates and returns the performance score between \n",
-    "        true and predicted values based on the metric chosen. \"\"\"\n",
-    "    \n",
-    "    # TODO: Calculate the performance score between 'y_true' and 'y_predict'\n",
-    "    score = None\n",
-    "    \n",
-    "    # Return the score\n",
-    "    return score"
+    "        true and predicted values based on the metric chosen. \"\"\"   \n",
+    "    return r2_score(y_true, y_predict)"
    ]
   },
   {
@@ -204,11 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model has a coefficient of determination, R^2, of 0.923.\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the performance of this model\n",
     "score = performance_metric([3, -0.5, 2, 7, 4.2], [2.5, 0.0, 2.1, 7.8, 5.3])\n",
@@ -233,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "Answer: An R2 value of 0.923 is very hight and indicates that the model predicts the prices very well."
    ]
   },
   {
@@ -653,21 +675,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
